--- a/_data/specialty.yml
+++ b/_data/specialty.yml
@@ -2,6 +2,7 @@ poc:
   - page-header: Therapy for POC
   - header: Providing A Space That Allows You To Express All Of Who You Are
     paragraph: |
+      ![POC](/assets/img/POC/pexels-brett-sayles-1405833.jpg){:.poc.family}
       As a person of color (POC), you may have had an experience with a therapist that left you feeling misunderstood and even more marginalized. Perhaps you sought a space where you could express confusing emotions as they related to your race and/or intersecting identities, but you felt like the experience and its systems failed you.
 
       Finding the mental health support you need as a person of color can be a veritable challenge. One bad experience is enough to lead to distrust of “professionals.” Yet, without support, you may have difficulty navigating the layered challenges within your skin. How do you manage a
@@ -10,12 +11,16 @@ poc:
       Perhaps you’re looking for a neutral yet culturally-aligned space where you can work through the pain of racism, microaggressions, and internalized racism with empathy. A space where your race or ethnic identity matters little, for you face life struggles like anyone else, which may include challenges with mental health, relationships, or gender and sexual identity. And how you visibly show up in the world should not be the elephant in the room. It should be the baseline—a
       starting point for a therapist who believes your experiences and does not gaslight you, forcing you to prove experiences in your skin.
 
+      ![POC](/assets/img/POC/pexels-anna-tarazevich-8229215.jpg){:.poc.woman}
+
       If you have worked with a therapist in the past who lacked cultural responsiveness, the experience may have left you feeling frustrated, alienated, guarded, or angry. And you may have stopped sharing altogether out of fear for your emotional health.
 
       Yet spaces do exist that prioritize the emotional safety of persons of color. At Rottenberg Therapy, the therapists of color can offer you the space to explore issues without feeling belittled. Our BIPOC therapists will allow you to bring 100 percent of who you are to sessions so you can fully work through your challenges.
   - header: Race Is An Added Stressor That Harms The Quality Of Life Of People Of Color
     paragraph: |
       Society plays a key role in the challenges systemically marginalized groups face, whether Black, Latinx, Asian, Native American, Indigenous, Pacific Islander, Desi, Queer, MENA, SWANA, and others. This marginalization often occurs through racism, which can be an invisible yet painful mark with effects that transfer through a lifetime and subsequent generations.
+
+      ![Couple at table](/assets/img/POC/pexels-monstera-5876619.jpg){:.poc.couple}
 
       In addition to the pain of racism, an unspoken social hierarchy also exists among people of color, with some minority groups seen more favorably by society than others. As an example, Asian people receive praise for displaying hard work and discipline, and for the same
       work, Black people and Latinx people will not be recognized.
@@ -30,6 +35,8 @@ poc:
 
       The cultures of racial minorities are also seen as secondary to the default White culture, which makes your struggles less visible. If you have an issue related to the culture you have acquired through your BIPOC racial identity, a traditional therapist may not have the tools to help because they were likely trained in an educational system that recognizes the challenges of White people as viewed through a White Western lens. This also makes them less likely to see and validate the experiences of people of color because they neither know nor understand your struggles.
 
+      ![Woman looking down](/assets/img/POC/pexels-rio-kuncoro-2829033.jpg){:.poc.bw}
+
       When the world does not see your struggles as valid, you may also invalidate your own struggles—and alone you often lack the tools to deal with nuanced experiences, particularly when your racial or ethnic identity intersects with them. 
       
       How does a Black female patient address disordered eating due to Black cultural values, for example, when society primarily highlights disordered eating through White females with White cultural values? Offering culturally-aware support for a Black patient, while ensuring that she also sees her experience through her own cultural lens, may be a challenge.  
@@ -43,6 +50,7 @@ poc:
       The therapists of color at Rottenberg Therapy offer a warm, empathetic, and non-judgmental environment where you can freely explore challenges, develop healthier coping strategies, and build the foundation you need to live the life you want. Our therapists proudly help POC from
       various backgrounds to overcome their challenges, including racism, sexism, misogynoir, sexual and gender identity, homophobia, anxiety, depression, trauma, relationship issues, disordered eating, grief, and more.
 
+      ![Close up woman's face](/assets/img/POC/pexels-daria-nekipelova-9665628.jpg){:.poc.face}
       Therapy for POC can give you the strength to feel empowered to face challenges within a marginalized identity. It will also:
 
         - Validate your experiences so you can begin to heal
@@ -56,6 +64,8 @@ poc:
 
       Additionally, we are all trauma-informed therapists. We use mindfulness and body/somatic-based approaches, but we may also introduce other modalities to better understand the cause of your issues and speed recovery. Cognitive-Behavioral Therapy (CBT), for example, can help
       you transform negative thought patterns into more positive ones so that you can make more constructive decisions when life challenges arise. And Radically-Open Dialectical Behavior Therapy (RO-DBT) allows you to work through rigidity and the need to control aspects of your life by cultivating more openness, flexibility, and social connectedness.
+
+      ![Standing woman of color](/assets/img/POC/pexels-lenar-9656624.jpg){:.poc.standing}
 
       Therapy for POC can allow you to experience some relief from being “othered”. Our BIPOC therapists have helped many clients honestly and effectively address their struggles and develop the skills that allowed them to tap into their innate ability to heal themselves. We believe that we can do the same for you.
 
@@ -79,6 +89,8 @@ lgbtqia:
     paragraph: |
       As a person who identifies as lesbian, gay, bisexual, transgender, queer, intersex, asexual, aromantic, or polyamorous, maybe you seek a safe space to work through life’s struggles. Perhaps you have faced subtle or overt pushback in life from friends or family regarding your queer identity. You may even feel trapped as you worry, Who can I open up to about details of my life--will I be judged?
 
+      ![LGBTQ Couple on Beach](/assets/img/LGBTQ/pexels-rodnae-productions-4918687.jpg){:.lgbtq}
+
       Perhaps you seek a therapist who takes a step beyond acceptance and affirms your LGBTQIA+ identity. Maybe you seek an environment that “gets" the nuances and intersections within your specific identity. For example, if you are non-binary, you may be looking for a queer-affirming therapist who understands the implications of body dysphoria.
 
       Finding the support you need as an LGBTQ person can be a challenge--you exist in a world not always sure where safety lies among friends, family, co-workers, and society. You may wonder if you will be antagonized for your identity because exists outside of the cisgendered, heteronormative mainstream.
@@ -89,6 +101,8 @@ lgbtqia:
   - header: LGBTQIA+ Individuals Face Unique Struggles In Today’s Society
     paragraph: | 
       Sometimes society “others” queer people. For those in this marginalized “out” group, having to explain who you are can feel like an experience of “otherness” at the hands of mainstream society. This experience can create obstacles to one’s self-perception and mental health. That someone may not understand an idea integral to your identity can make queer people feel frustrated, disappointed, isolated, or confused. And your existence as part of the LGBTQIA+ community deserves to be acknowledged and appreciated.
+
+      ![LGBTQ Person wrapped in Pride Flag](/assets/img/LGBTQ/pexels-anna-shvets-4611908.jpg){:.lgbtq.pride}
 
       Society has evolved toward more acceptance of LGBT identities, yet we still have progress to make. Though the gay and lesbian communities have had a stronger presence in the mainstream in recent years, certain groups under the queer umbrella continue to exist at the margins, including transgender, non-binary, aromantic, asexual, gender fluid, and bisexual people.
 
@@ -103,6 +117,8 @@ lgbtqia:
       Rottenberg Therapy offers a compassionate, non-judgmental environment where you can
       explore your issues with empathetic support from a queer-affirming therapist. Our approach to counseling has helped many LGBTQIA patients to work through challenges like anxiety and depression, discrimination, bullying, harassment, coming out, lesbian, gay, and queer relationship counseling, family issues, gender dysphoria, substance abuse, addiction, and more.
 
+      ![LGBTQ POC in White Dress](/assets/img/LGBTQ/pexels-greta-hoffman-7675561.jpg){:.lgbtq.dress}
+
       Over the course of therapy, we will work with you to build a foundation that can help you feel more empowered, aware, and in control of your life. We will hold space for your story and use our sessions as a template to help you do the same for yourself. In therapy, our goal is that you learn more about who you are and use your inherent strengths as they relate to your LGBTQIA+ identity or life struggles. 
 
       Additional topics we explore in queer-affirming counseling can include:
@@ -116,15 +132,21 @@ lgbtqia:
 
       At Rottenberg Therapy, our therapists take a psychodynamic/psychoanalytic approach to treatment, which works to uncover the emotional roots of any of your struggles and promotes self-awareness and self-examination. We think of this as gentle and deep work with long-lasting effects. And we encourage patients to bring in their dreams, fantasies, and their whole selves into the sessions in order to draw from the known/conscious parts as well as the unknown/unconscious parts of their psyche.
 
+      ![LGBTQ Pink Wig and Pink Beard](/assets/img/LGBTQ/pexels-matteus-bernardes-2566434.jpg){:.lgbtq.beard}
+
       Additionally, we are all trauma-informed therapists. We use mindfulness and body/somatic-based approaches, but we may also introduce other modalities to better understand the cause of your issues and speed recovery. Cognitive-Behavioral Therapy (CBT), for example, can help you transform negative thought patterns into more positive ones so that you can make more constructive decisions when life challenges arise. And Radically-Open Dialectical Behavior
       Therapy (RO-DBT) allows you to work through rigidity and the need to control aspects of your life by cultivating more openness, flexibility, and social connectedness.
 
       We cannot promise that counseling will deliver you from every hardship you face, yet through talking to one of our culturally responsive therapists, you can better understand your struggles and develop coping strategies to better manage them. We believe that there is great relief through the process of uncovering one's unconscious beliefs, hidden desires, and internal conflicts. Through expanding your sense of self by getting to know yourself better, we find that people understand humanity and the world around them, and can find more internal peace.
 
+      ![LGBTQ POC in Net Shirt on red background](/assets/img/LGBTQ/pexels-philip-boakye-6673189.jpg){:.lgbtq.redbg}
+
       We do acknowledge that the fields in which we practice--psychology, psychotherapy, and psychoanalysis--have been founded on white supremacist, patriarchal, cisgender, and heteronormative ideas, and we all are working toward dismantling these ideas from within ourselves, this practice, and our field. We welcome conversations with you any time you may feel this promise is not upheld in sessions and we are committed to challenging ourselves to continue to move toward a radically inclusive space, within ourselves and in our society.
   - subheader: Maybe you still have questions about LGBTQIA+ Therapy...
   - subheader: Are all of your therapists queer?
     paragraph: |
+      ![LGBTQ Cis FemaleAsian Couple](/assets/img/LGBTQ/pexels-roberto-hund-5311821.jpg){:.lgbtq.couple2}
+
       All therapists in this practice are queer-affirming or queer therapists. What this means to us is that even if your therapist is not queer, they have been and continue to be on a journey to make themselves knowledgeable, responsive, curious, and responsible to understand the nuances of queer life. Please let us know if you have a specific request for a queer therapist.
   - header: Are You Ready To Find The Support To Tap Into Your Inner Strength?
     paragraph: |
