--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -135,6 +135,36 @@ taylor:
       Counseling Center. Since graduating, I’ve pursued training in trauma treatment, grief counseling, and psychodynamic therapies. I am also trained to provide Eye Movement Desensitization and Reprocessing (EMDR) therapy.
 
       Central to my work with clients is a commitment to antiracist, anticapitalist practice. In our work together, we’ll examine how systemic factors influence your worldview and the challenges you face. My approach to therapy is grounded in psychodynamic, existential-humanistic, and narrative frameworks, and I employ a solution-focused strategy when appropriate. Above all, it is my priority that therapy is a refuge from day-to-day suffering where we can work together to find joy.
+laura:
+  name: Laura Cheatham, MHC-LP
+  email: laura@rottenbergtherapy.com
+  phone: 908-242-6157
+  page: laura-cheatham/
+  image: /assets/img/headshots/Laura-1.jpg
+  specialties:
+    - Trauma:
+    - Intimate Partner/Family Violence:
+    - Sexual Abuse:
+    - Human Trafficking:
+    - Adolescents:
+    - Caregivers:
+    - Highly Sensitive People:
+    - Bullying:
+    - Depression:
+    - Anxiety:
+    - Self-Harm:
+    - Life Transitions:
+    - Existential Anxiety:
+  blurb: |-
+        Beginning your search for a therapist can be challenging- while I do not yet know you or what you need to hear to reach out, you can be certain that I wish to know and understand as facilitator of compassion and change.
+
+        I invite you to join me in a warm, collaborative relationship in which we can examine how culture, relationships, and your previous experiences impact the connections you have with your mind, body, and the world. As members of society, we absorb and internalize painful beliefs about ourselves when we do not fit neatly into a certain box. For those who are feeling stuck, together we will uncover how previous experiences impact your current thoughts, moods and patterns in an effort to lead you towards a more fulfilling life.
+  bio: |
+        My style is geared towards those seeking a gentle, non-judgmental, yet direct approach to identifying their relational and behavioral patterns, and for those who are seeking to understand how the wounds of early life, events, and traumas have shaped their interactions.
+
+        My experience has centered around intimate partner violence, child abuse, and trauma. I also work with adolescents, adults, and caregivers with concerns such as anxiety, depression, and life transitions. I take an intersectional/anti-racist stance and welcome gender nonconforming people, POC, and those from marginalized groups.
+
+        The therapeutic process may challenge you in unexpected ways, but I aim to bear witness to your struggles and successes. Through our work together, you will not be alone as I seek to help you find meaning and self-acceptance.
 sary:
   name: Sary Rottenberg, LMHC
   title: Owner/Founder
