--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,7 @@ Header set Cache-Control "public, max-age=31536000"
 </FilesMatch>
 
 # Custom 404 errors
-ErrorDocument 404 /_site/404.html
+ErrorDocument 404 /_site/_pages/404.html
 
 # Prevent viewing of .htaccess file
 <Files .htaccess>
