--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: sary@rottenbergtherapy.com
 description: >- # this means to ignore newlines until "baseurl:"
   Sary Rottenberg Psychotherapy provides therapy to individuals and couples in New York City and surrounding areas. We specialize in and treat relationships, career changes, trauma, depression, anxiety as well as issues affecting the LGBTQ community.
 baseurl: / # the subpath of your site, e.g. /blog
-url: "http://www.rottenbergtherapy.com"
+url: "https://www.rottenbergtherapy.com"
 address: 34 Plaza St. West Brooklyn, NY 11238
 plugins:
   - jekyll-sitemap
