change permalinks, add authors

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 brand: Rottenberg Therapy
 title: Rottenberg Therapy - New York City based therapy for individuals and couples
 email: sary@rottenbergtherapy.com
@@ -44,3 +45,4 @@ sass:
 exclude:
   [node_modules, Gemfile, Gemfile.lock, vendor/bundle/, vendor/cache/, vendor/gems, vendor/ruby/]
 livereload: true
+permalink: /blog/:title/
