--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,6 +23,7 @@ collections:
           search_fields: [display_name],
           value_field: 'name',
         }
+      - { label: "Categories", name: "categories", widget: "string", required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
   - name: 'authors'
     label: 'Authors'
