--- a/_config.yml
+++ b/_config.yml
@@ -45,3 +45,4 @@ sass:
 exclude:
   [node_modules, Gemfile, Gemfile.lock, vendor/bundle/, vendor/cache/, vendor/gems, vendor/ruby/]
 livereload: true
+permalink: /blog/:title/
