--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,23 +17,7 @@ collections:
       - {
           label: 'Author',
           name: 'author',
-          widget: 'relation',
-          collection: 'authors',
-          display_fields: [display_name],
-          search_fields: [display_name],
-          value_field: 'name',
-        }
+          widget: 'string',
       - { label: "Categories", name: "categories", widget: "string", required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-  - name: 'authors'
-    label: 'Authors'
-    folder: '_authors/'
-    create: true
-    editor:
-      preview: false
-    fields:
-      - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'author' }
-      - { label: 'Short Name', name: 'name', widget: 'string' }
-      - { label: 'Display Name', name: 'display_name', widget: 'string' }
-      - { label: 'Position', name: 'position', widget: 'string' }
-      - { label: "Body", name: "body", widget: "markdown" }
+  
