--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,10 +14,7 @@ collections:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - {
-          label: 'Author',
-          name: 'author',
-          widget: 'string',
+      - { label: 'Author', name: 'author', widget: 'string' }
       - { label: "Categories", name: "categories", widget: "string", required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
   
