--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 media_folder: 'assets/uploads'
+public_folder: '/uploads'
 collections:
   - name: 'blog'
     label: 'Blog'
@@ -14,7 +15,8 @@ collections:
       - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Author', name: 'author', widget: 'string', required: false }
       - { label: "Categories", name: "categories", widget: "string", required: false }
+      - {label: 'Featured Image', name: 'image', widget: 'image', required: false}
       - { label: 'Body', name: 'body', widget: 'markdown' }
   
