--- a/_data/specialty.yml
+++ b/_data/specialty.yml
@@ -151,3 +151,51 @@ lgbtqia:
   - header: Are You Ready To Find The Support To Tap Into Your Inner Strength?
     paragraph: |
       Working through issues alone can be difficult, particularly in a world that isn’t always accepting of difference. If you’re ready to take the next step toward a space that honors this difference, we invite you to contact us to see how LGBT-affirming psychotherapy can help.
+emdr:
+  - page-header: Eye Movement Desensitization and Reprocessing (EMDR)
+  - header: Making space so you can recover from your trauma
+    paragraph: | 
+      - Have you been in therapy for a long time with little visible progress?
+      - Do you get frustrated when therapy is “just talking?”
+      - Is it hard to talk about (or even think about) your trauma in therapy?
+
+      It can feel discouraging when you feel like therapy hasn’t been working and you’re right back where you started. Some people find the talking part of “talk therapy” overwhelming and would prefer more structure and guidance from their therapist. There may even be things that you know you want to talk about, but you’re not sure where to start. All of these challenges can leave a person feeling like therapy isn’t for them or that they’re beyond help. 
+  - subheader: TRAUMA IS HARD TO THINK ABOUT
+    paragraph: |
+      When we go through difficult experiences, sometimes it can be difficult to think about or talk about. You may have trouble finding the words to describe your experience, it may be uncomfortable to recall, and it may even feel like you’re reliving that experience if you even think about it. This is all a normal reaction to trauma -- traumatic memories are stored in the brain differently than other kinds of memories. During a traumatic event, the fight-or-flight response kicks in to cope with the immediate situation in order to keep you as safe as possible. But because your brain is so focused on keeping you safe, it doesn’t fully process what is happening.
+ 
+      On a neurobiological level, the amygdala (sometimes called the “fear center” of the brain) kicks into overdrive, while the prefrontal cortex (which helps with emotional processing) slows down. This means that all parts of a traumatic memory – even the benign elements – become associated with fear. Sights, sounds, and other stimuli that are normally harmless create a strong fear response. EMDR therapy shifts how trauma is stored in the brain and reduces the disturbing emotions, sensations, symptoms, and beliefs associated with those experiences. Through the use of eye movements, EMDR therapy fundamentally changes the way the memory is stored.
+    
+      The EMDR process can reduce sensitivity to the traumatic memory and its associated painful thoughts or feelings. The emotional charge associated with the traumatic memory is eliminated or reduced. Clients are often amazed that issues they’ve worked on for years in talk therapy become suddenly lighter after several EMDR therapy sessions.
+  - subheader: WHAT DOES EMDR LOOK LIKE?
+    paragraph: |
+      EMDR has eight phases that can be grouped into three different components: preparation, reprocessing, and completion. During the preparation portion, you and your therapist will get to know each other and will begin establishing a safe relationship. One unique feature of EMDR is that you don’t need to share the details of your trauma with your therapist; you have full control over what you do and don’t share and can share memories when you’re ready. This part of EMDR includes reviewing existing coping skills and developing new strategies to help you throughout the EMDR process. You will also create a short treatment plan that outlines one traumatic memory you want to focus on and its associated thoughts and feelings.
+
+      With a foundation of safety and structure set, the reprocessing portion can begin. During this part of EMDR, your therapist will likely have you move your eyes rapidly from side to side, following their finger or a moving light while thinking about the traumatic memory. Some therapists utilize tapping or recorded sound to achieve the same effect; this is dependent on their available resources and your personal needs. This process is believed to engage your brain in a way that helps to “loosen up” the frozen memory, helping you to connect it to other memories so that it becomes just another part of your life story. The completion portion ensures that your mind and body have processed the memory through a body scan and other exercises.
+  - subheader: HOW DOES EMDR WORK?
+    paragraph: |
+      There are many theories about how the eye movement helps with memory reprocessing. When it was first developed as a method of treating trauma, it was thought to help the left and right sides of our brain communicate more effectively, since the process involves engaging both sides of the body. As research has progressed, scientists have also begun to explore how these eye movements mimic rapid eye movement while sleeping. This research suggests that while mimicking sleep, our body will relax; pairing this relaxation with recalling traumatic memories can help us learn how to stay calm when presented with triggers in everyday life.
+ 
+      The power of EMDR doesn’t just lie in the eye movement, however. The early phases of EMDR provide you with new ways of understanding your traumatic experiences and tools for responding to memories that trigger a panic response. The treatment plan phase is especially useful for clients, as it helps you to identify how traumatic events change the way you think about yourself and the world around you. This deeper understanding of the impact of trauma can, by itself, be a healing component in your therapy journey.
+ 
+      Above all, what EMDR provides is space to make sense of your traumatic experiences. In our daily lives, we are swept up in to-do lists, deadlines, and difficult conversations. Even in therapy, clients can sometimes feel pressure to have things to talk about or goals to achieve. EMDR helps to take away that pressure by allowing you to explore thoughts and memories in a safe environment, being in full control of the conversation that accompanies the eye movement exercises.
+  - subheader: Will I remain in control during EMDR?
+    paragraph: | 
+      EMDR is not hypnosis. You will be awake, alert, and in complete control throughout the entire session. Many safeguards are put in place so that, in the event someone does want to take a pause, they are able to do so at any time. The therapist cannot “make” the client do anything they do not want to do.
+  - subheader: What if I’m not ready to talk about my trauma yet?
+    paragraph: | 
+      The reprocessing phase does not start in the first session. It is a multi-step process where you and your therapist will get to know each other first, taking a thorough history and practicing coping strategies before any reprocessing begins. Even when the reprocessing phase starts, you can pause at any time. 
+  - subheader: I don’t have PTSD – can I still benefit from EMDR?
+    paragraph: |
+      EMDR is not just for severe trauma. It can be used to work through anxiety, OCD, depression, and other maladaptive behaviors. For many people, these behaviors started somewhere, and if we return to the events that taught you to respond to challenges in a maladaptive way, we can find new lessons and coping strategies that feel healthier and lead to more peace. You don’t have to have a PTSD diagnosis in order for EMDR to be effective and beneficial. 
+  - subheader: You Can Recover From Trauma
+    paragraph: |
+      If it sounds like EMDR can help you with the problems you’re facing, you can schedule a phone consultation with our EMDR-trained therapist, Taylor Mefford, by calling 914-809-0498 or emailing: [taylor@rottenbergtherapy.com](taylor@rottenbergtherapy.com), and if you want more information about Taylor click on the link below.
+
+      [https://rottenbergtherapy.com/taylor-mefford/](https://rottenbergtherapy.com/taylor-mefford/)
+
+
+
+
+
+ 
