--- a/_data/services.yml
+++ b/_data/services.yml
@@ -4,3 +4,9 @@ individuals:
 relationship counseling:
   blurb: |-
     The special set of challenges that comes with romantic relationships are addressed bringing to light patterns of communications, and needs that are asked to be met.
+family counseling: 
+  blurb: |-
+    All family formations are welcome to counseling, monogamous, non traditional, single parenthood and co-parenting.
+group counseling:
+  blurb: |-
+    Working in a group with others can be supportive, invigorating, and be a space for seeing and experiencing that others are challenged in similar, yet different ways. Contact us for current group offerings.
