remove cassandra contact info

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -36,8 +36,8 @@ sary:
     I continue to address patriarchy within myself to be a more conscious therapist to you. In addition to English I conduct therapy in Hebrew. See Hebrew description attached. As such, I work with people who deal with acculturation, immigration and multicultural identities and welcome people from around the world who wish to be listened to with an aware ear.
 cassandra:
   name: Cassandra Robertson-Benjamin, MHC-LP
-  email: cassandra@rottenbergtherapy.com
-  phone: 929-363-7427
+  email: #cassandra@rottenbergtherapy.com
+  phone: #929-363-7427
   page: cassandra-robertson-benjamin/
   image: /assets/img/headshots/Cassandra-1.jpg
   specialties:
@@ -55,6 +55,8 @@ cassandra:
     - LGBTQIA++:
         link: '#identity'
   blurb: |-
+      **Cassandra is not accepting new clients at this time**
+
       At first, we will strive to learn if we can connect. We will explore and acknowledge if this is a space you can allow yourself to be seen. We will look at your challenges and strengths to understand how you have arrived at the place you find yourself today.
 
       My goal is to create a safe space where exploration, questioning, discovery, and feeling are possible.  I seek to be a partner who holds a light to illuminate the unknown places.
